<resources>
    <string name="app_name">Diete</string>
    <string name="get_healthy_with_diete">Get Healthy With Diete</string>
    <string name="get_recipe">Get Recipe</string>
    <string name="available_recipes_for">Available Recipes for:</string>
    <string name="enter_your_meal">Enter your Meal</string>
    <string name="food_image">food image</string>
    <string name="search_your_meal">search your meal</string>
    <string name="appbar_scrolling_view_behavior">Appbar</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="category">Category</string>
    <string name="meal_name">Meal Name</string>
    <string name="hello_there_welocme_back">Hello there, welocme back</string>
    <string name="hello_there_welcome_back">Hello there, welcome back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logo_image">logo_image</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="diete">DIETE</string>
    <string name="welcome">Welcome</string>
    <string name="signup_for_a_healthy_journey">SignUp for a Healthy Journey</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="go">GO</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="dot_loading">...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="country">Country</string>
    <string name="favorite">Favorite</string>
</resources>