<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Login"
    android:orientation="vertical"
    android:background="@color/green">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="@string/logo_image"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/food" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_name"
        android:text="@string/hello_there_welcome_back"
        android:textStyle="bold"
        android:textSize="40sp"
        android:transitionName="logo_name"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/quando"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/sign_in_to_continue"
        android:transitionName="slogan_name"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:textColor="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="20dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/email"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:transitionName="username_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/password"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:transitionName="password_tran"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/forgot_password"
            android:layout_gravity="end"
            android:elevation="0dp"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/login_btn"
            android:transitionName="button_tran"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/new_user_sign_up"
            android:layout_gravity="end"
            android:elevation="0dp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:id="@+id/signup_screen"
            android:fontFamily="@font/antic"
            android:transitionName="login_signup_tran"/>


    </LinearLayout>

</LinearLayout>